--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/cloudloop/WeatherMailDaily/issues"
   },
-  "homepage": "https://github.com/cloudloop/WeatherMailDaily#readme"
+  "homepage": "https://github.com/cloudloop/WeatherMailDaily#readme",
+  "dependencies": {
+    "dotenv": "^16.3.1"
+  }
 }
