--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "homepage": "https://github.com/cloudloop/WeatherMailDaily#readme",
   "dependencies": {
+    "axios": "^1.6.5",
     "chroma-js": "^2.4.2",
-    "dotenv": "^16.3.1"
+    "cron": "^3.1.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.8"
   }
 }
